# gl-browser

./: .gitmodules  CMakeLists.txt
resource/: fragment_color.glsl  fragment_model.glsl  fragment_texture.glsl  vertex.glsl  vertex_model.glsl  vertex_texture.glsl
resource/model/: model.blend  model.blend1  model.mtl
source/: Camera.hpp  Model.cpp  Model.hpp  Shader.hpp  main.cpp
